<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_movie_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gali.apps.movielibrary.AddMovieDialogActivity"
    android:background="#f0f068">

    <TextView
        android:text="@string/addQuesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addQuesTV"
        android:layout_marginTop="57dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/addQuesTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:weightSum="3">

        <Button
            android:text="@string/internetBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/internetBtn"
            android:layout_weight="1"
            android:textSize="10sp" />

        <Button
            android:text="@string/manualBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/manualBtn"
            android:layout_weight="1"
            android:textSize="10sp" />

        <Button
            android:text="@string/cancelDialogBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/cancelDialogBtn"
            android:layout_weight="1"
            android:textSize="10sp" />
    </LinearLayout>
</RelativeLayout>
